api-gatway/console-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: console-ingressroute
  namespace: console-system
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    # match: Host(`console.console-system.traefik`)
    # match: Host(`console.console-system.svc`) && (PathPrefix(`/`) || PathPrefix(`/static/`) || PathPrefix(`/api/resource/`) || PathPrefix(`/api/`))
    match: PathPrefix(`/`) || PathPrefix(`/static/`) || PathPrefix(`/api/resource/`) || PathPrefix(`/api/`)
    # middlewares:
    # - name: console-stripprefix 
    #   namespace: api-gateway-system
    services:
    - name: console
      namespace: console-system
      port: https
      scheme: https
      serversTransport: insecure-transport
  tls:
    # secretName: console-tls
    # secretName: console-https-secret
    {}

# --- 

# apiVersion: traefik.containo.us/v1alpha1
# kind: ServersTransport
# metadata:
#   name: insecure-transport
#   namespace: api-gateway-system

# spec:
#   # serverName: api-gateway
#   insecureSkipVerify: true

---

# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: console-stripprefix
#   namespace: api-gateway-system
# spec:
#   stripPrefix:
#     prefixes:
#       - "/api/hypercloud"
#       - "/api/multi-hypercloud"
#       - "/api/webhook"
#     forceSlash: true
