api-gatway/hypercloud-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hypercloud-ingressroute
  namespace: api-gateway-system
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: PathPrefix(`/api/hypercloud`) || PathPrefix(`/api/multi-hypercloud`) || PathPrefix(`/api/webhook`)
    middlewares:
    - name: hypercloud-stripprefix
      namepsace: api-gateway-system    
    services:
    - kind: Service
      name: api-server-service-for-traefik
      namespace: hypercloud5-system
      port: https
      scheme: https
      serversTransport: insecure-transport 
  tls: {}

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: hypercloud-stripprefix
  namespace: api-gateway-system
spec:
  stripPrefix:
    prefixes:
      - "/api/hypercloud"
      - "/api/multi-hypercloud"
      - "/api/webhook"
    # forceSlash: true
