api-gatway/monitoring-ingressroutes.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-ingressroute
  namespace: api-gateway-system
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: PathPrefix(`/api/prometheus/api`) || PathPrefix(`/api/prometheus\-tenancy/api`)
    priority: 100                      
    middlewares:
    - name: monitoring-stripprefix
      namepsace: api-gateway-system    
    - name: jwt-decode-auth
      namespace: default
    services:
    - kind: Service
      name: prometheus-k8s
      namespace: monitoring
      port: web
      scheme: http
  - kind: Rule
    match: PathPrefix(`/api/alertmanager/api`)
    priority: 100                       
    middlewares:
    - name: monitoring-stripprefix
      namepsace: api-gateway-system
    services:
    - kind: Service
      name: alertmanager-main 
      namespace: monitoring 
      port: web
      scheme: http
  tls: {}

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: monitoring-stripprefix
  namespace: api-gateway-system
spec:
  stripPrefix:
    prefixes:
      - "/api/prometheus"
      - "/api/prometheus-tenancy"
      - "/api/alertmanager"
    forceSlash: true
